# bpm-microservices

./: .gitignore  README.md  docker-compose.yml  init.sql
calendar-service/: .env  pyproject.toml
calendar-service/migrations/: env.py
calendar-service/migrations/versions/: 7a00703e3f77_initial_revision.py  cc1afd787dc2_second_revision.py
calendar-service/src/: config.py  main.py
calendar-service/src/api/: calendar_utils.py  endpoints.py  routes_calendar.py  schemas.py
calendar-service/src/db/: models.py
calendar-service/src/services/: event_consumers.py  rabbitmq.py
task-service/: .env  pyproject.toml
task-service/migrations/: env.py
task-service/migrations/versions/: b80602561384_second_revision.py  fa88a0f74908_initial_revision.py
task-service/src/: config.py  main.py
task-service/src/api/: endpoints.py  evaluation_utils.py  routes_meetings.py  routes_tasks.py  schemas.py  task_utils.py  utils.py
task-service/src/db/: models.py
task-service/src/services/: consumer_example.py  event_consumers.py  (+1 more)
team-service/: .env  Dockerfile  pyproject.toml
team-service/migrations/: env.py
team-service/migrations/versions/: 926ba61dea36_initial_revision.py  b0aa54b8c0c0_second_revision.py
team-service/src/: config.py  main.py
team-service/src/api/: endpoints.py  routes_team.py  schemas.py  utils.py
team-service/src/db/: database.py  models.py
team-service/src/services/: event_consumers.py  rabbitmq.py
user-service/: .env  Dockerfile  README.md  pyproject.toml
user-service/migrations/: env.py
user-service/src/: config.py  main.py
(+11 files in other folders)
